tests/ui/diagnostic_namespace/on_type_error/report_warning_on_missing_options.stderr
warning: missing options for `diagnostic::on_type_error` attribute
  --> $DIR/report_warning_on_missing_options.rs:3:1
   |
LL | #[diagnostic::on_type_error]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: at least a single `note` option is expected
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0308]: mismatched types
  --> $DIR/report_warning_on_missing_options.rs:9:34
   |
LL |     let _: MissingOptions<i32> = 32;
   |            -------------------   ^^ expected `MissingOptions<i32>`, found integer
   |            |
   |            expected due to this
   |
   = note: expected struct `MissingOptions<i32>`
                found type `{integer}`
help: try wrapping the expression in `MissingOptions`
   |
LL |     let _: MissingOptions<i32> = MissingOptions(32);
   |                                  +++++++++++++++  +

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
